--- a/todos-native/package.json
+++ b/todos-native/package.json
@@ -9,11 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~49.0.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-textinput-effects": "^0.6.3",
     "react-redux": "^8.1.1"
   },
   "devDependencies": {
