--- a/todos-native/package.json
+++ b/todos-native/package.json
@@ -15,6 +15,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-paper": "^5.10.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-textinput-effects": "^0.6.3",
     "react-redux": "^8.1.1"
